--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.7.9",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
