--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "next15sample",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.13.1"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
